Manually revert some changes, fix alignment in icon

--- a/src/components/layout/Layout/Header/Toolbar.scss
+++ b/src/components/layout/Layout/Header/Toolbar.scss
@@ -1,6 +1,6 @@
 .toolbar {
   display: flex;
-  padding-top: 10px;
+  padding-top: 17px;
   padding-bottom: 17px;
   margin-right: 20px;
 
