--- a/src/components/layout/Layout/Header/index.scss
+++ b/src/components/layout/Layout/Header/index.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
 
   .breadcrumb-wrapper {
-    padding-top: 10px;
+    padding-top: 17px;
     padding-bottom: 17px;
   }
 
@@ -19,7 +19,7 @@
 
   .account-wrapper {
     width: 36px;
-    padding-top: 10px;
+    padding-top: 17px;
     padding-bottom: 17px;
   }
 }
