--- a/src/components/layout/Layout/Sidebar/index.scss
+++ b/src/components/layout/Layout/Sidebar/index.scss
@@ -127,8 +127,8 @@
 
       .logo-link {
         padding-top: 9px;
-        padding-bottom: 12px;
-        height: 64px;
+        padding-bottom: 9px;
+        height: 58px;
 
         svg {
           max-width: 25px;
